fix: dark mode style

--- a/assets/styl/Theme/Dark/App/Main/Post/Permalink/Comment/List.styl
+++ b/assets/styl/Theme/Dark/App/Main/Post/Permalink/Comment/List.styl
@@ -1,13 +1,16 @@
 html[data-theme='dark']
   .content__list
-    > ol li
+    li > div::before
+      background-color alpha($THEME_COLOR_WHITE, .5)
+    > ol li:not(.tt_more_preview_comments_wrap)
+      border-color alpha($THEME_COLOR_WHITE, .7)
       &::before
         background-color alpha($THEME_COLOR_WHITE, .5)
     .header .user .metainfo
-        .name
-          &, a
-            color $THEME_COLOR_WHITE
-        .date
-          color alpha($THEME_COLOR_WHITE, .8)
+      .name
+        &, a
+          color $THEME_COLOR_WHITE
+      .date
+        color alpha($THEME_COLOR_WHITE, .8)
     .body
       color $THEME_COLOR_WHITE
